@@ -841,6 +841,54 @@ __Icon Button|Icon</code>
     </div>
   </div>
 <!-- -->
+  <div class="ui basic segment">
+    <h4 id="negative" class="ui header">Negative</h4>
+    <p>A button can hint towards a negative consequence</p>
+  </div>
+<!-- -->
+  <div class="ui divided segment grid">
+    <div class="ui attached segment">
+      <div class="ui top attached label">Negative</div>
+    </div>
+<!-- -->
+    <div class="ui center aligned six wide column">
+      <h5 class="ui header">Preview</h5>
+      <button class="ui negative button">Negative Button</button>
+    </div>
+<!-- -->
+    <div class="ui left aligned ten wide column">
+      <h5 class="ui header">Markdown Syntax</h5>
+      <div class="ui inverted very padded segment">
+        <code>__Negative Button|Negative Button__</code>
+        <br />
+      </div>
+    </div>
+  </div>
+<!-- -->
+  <div class="ui basic segment">
+    <h4 id="fluid" class="ui header">Fluid</h4>
+    <p>A button can take the width of its container</p>
+  </div>
+<!-- -->
+  <div class="ui divided segment grid">
+    <div class="ui attached segment">
+      <div class="ui top attached label">Fluid</div>
+    </div>
+<!-- -->
+    <div class="ui center aligned six wide column">
+      <h5 class="ui header">Preview</h5>
+      <button class="ui fluid button">Fluid Button</button>
+    </div>
+<!-- -->
+    <div class="ui left aligned ten wide column">
+      <h5 class="ui header">Markdown Syntax</h5>
+      <div class="ui inverted very padded segment">
+        <code>__Fluid Button|Fluid Button__</code>
+        <br />
+      </div>
+    </div>
+  </div>
+<!-- -->
 </div>
 
 </body>
