@@ -77,7 +77,11 @@
 ,
 <a class="ui item" href="button.html#compact">Compact</a>
 ,
-<a class="ui item" href="button.html#positive">Positive</a></div>
+<a class="ui item" href="button.html#positive">Positive</a>
+,
+<a class="ui item" href="button.html#negative">Negative</a>
+,
+<a class="ui item" href="button.html#fluid">Fluid</a></div>
     </div>
   </div>
 </div>
